@@ -1,8 +1,14 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.314 2008-06-12 22:06:19 guru Exp $
+	$Id: ChangeLog,v 1.315 2008-06-13 00:31:34 guru Exp $
 -----------------------------------------------------------------------------------------
 2005-06-12	pwessel
 	* examples:		Added ex27 for plotting img files and ex28 for plotting UTM
+	* psbasemap.c:		The syntax for the -L option had to change since one could
+				not easily use the :label: specification if the coordinates
+				were given in dd:mm[:ss] format.  A new syntax has been
+				implemented where one or more +?[args] strings are appended
+				after the required parameters.
+	* pscoast.c:		Same.
 
 2005-06-11	pwessel
 	* mgd77/mgd77sniffer.c:	Bitwise assignment error was deactivating other fields when
